# Tradebot

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  LICENSE  README.md  RISK.md  SECURITY.md  docker-compose.yml  justfile  soul.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example  blackout_events.json  stations.json
docker/: Dockerfile.python  Dockerfile.rust  docker-compose.yml
docker/grafana/dashboards/: decision_audit.json  execution_spreads.json  feed_health.json  system_health.json  trading_overview.json
docker/grafana/provisioning/alerting/: contact_points.yaml  rules.yaml
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: postgres.yaml
docs/: BUILD_STATUS.md  IMPROVEMENT_PLAN.md  PLAN_ANALYSIS.md  configuration.md  data_pipeline_upgrade.md  deployment.md  improvements.md  redis-keys.md  sql-reference.md  trading-models.md
docs/build-plans/: phase-0-stabilization.md  phase-1-crypto-refactor.md  phase-11-frontend-terminal.md  phase-11.0-terminal-framework.md  phase-11.1-main-page.md  phase-11.2-signals-execution.md  phase-11.3-analytics-risk.md  phase-11.4-weather-page.md  phase-2-order-state-machine.md  phase-3-event-driven.md  phase-4-fair-value.md  phase-5-production.md  phase-7-calibration-agent.md  phase-7-prompt.md  phase-8-backtesting.md  tradebot-debugging-plan-2026-03-10.md
docs/modules/: BE-01_FOUNDATION.md  BE-02_KALSHI_CLIENT.md  BE-03_DATA_LAYER.md  BE-04_SIGNAL_ENGINE.md  BE-05_EXECUTION_ENGINE.md  BE-06_SCANNER_METRICS.md  BE-07_UI_BACKEND.md  BE-08_BACKTEST_CALIBRATION.md  BE-09_INTEGRATION.md  BE-10_PRODUCTION.md  README.md
migrations/: 001_contracts.sql  002_signals.sql  003_orders.sql  004_daily_summary.sql  005_observations.sql  006_market_snapshots.sql  007_calibration.sql  008_blackout_events.sql  009_contract_rules.sql  010_weather_sources.sql  011_crypto_sources.sql  012_replay_tables.sql  013_paper_trades.sql  014_order_state_tracking.sql  015_station_calibration.sql  016_strategy_analytics.sql  017_model_components.sql  018_backtest_runs.sql  019_calibration_metrics.sql  020_backtest_enhancements.sql  021_decision_log.sql  022_fix_no_direction_fill_prices.sql  023_performance_indexes.sql  024_fix_paper_trades_action.sql
python/: config.py  pyproject.toml  requirements.txt  sync_contracts.py
python/analytics/: aggregator.py  settlement_summary.py
python/backtest/: __init__.py  crypto_backtest.py  runner.py  weather_backtest.py
python/backtester/: calibration.py  costs.py  engine.py  metrics.py  optimize.py  replay.py  sweep.py
python/calibrator/: daemon.py
python/collector/: daemon.py
python/dashboard/: app.py
python/dashboard/static/: style.css  terminal.css  terminal.js
python/dashboard/templates/: analytics.html  base.html  calibration.html  execution.html  index.html  main.html  risk.html  signals.html  weather.html
python/data/: __init__.py  asos.py  aviationweather.py  binance_ws.py  historical_import.py  kalshi_history.py  mesonet.py  nws.py  open_meteo.py
python/evaluator/: daemon.py
python/models/: __init__.py  binary_option.py  crypto_fv.py  physics.py  rounding.py  weather_fv.py
python/rules/: __init__.py  discover.py  resolver.py  ticker_parser.py  timezone.py
python/signals/: __init__.py  crypto.py  notifier.py  publisher.py  registry.py  scanner.py  types.py  utils.py  weather.py
python/tests/: test_analytics.py  test_binance.py  test_binary_option.py  test_calibrator.py  test_costs.py  test_crypto_evaluator.py  test_crypto_fv.py  test_crypto_parity.py  test_kalshi_history.py  test_mesonet.py  test_metrics.py  test_nws.py  test_phase8_fixes.py  test_physics.py  test_publisher.py  test_registry.py  test_replay_engine.py  test_rules.py  test_sweep.py  test_sweep_crypto.py  test_utils.py  test_weather_evaluator.py  test_weather_fv.py
python/utils/: __init__.py  blackout.py  kelly.py
rust/: Cargo.toml
rust/src/: clock.rs  config.rs  contract_discovery.rs  crypto_asset.rs  crypto_evaluator.rs  crypto_fv.rs  crypto_state.rs  crypto_state_registry.rs  dashboard.html  dashboard.rs  dead_letter.rs  decision_log.rs  discord.rs  execution.rs  feed_health.rs  health.rs  integration_tests.rs  kill_switch.rs  lock_ext.rs  logging.rs  main.rs  metrics_registry.rs  order_manager.rs  orderbook_feed.rs  supervisor.rs  types.rs
rust/src/db/: queries.rs
rust/src/execution/: mod.rs  order.rs  position.rs  sizing.rs
rust/src/feeds/: binance_futures.rs  binance_spot.rs  coinbase.rs  deribit.rs  mod.rs
rust/src/kalshi/: auth.rs  client.rs  error.rs  mod.rs  orderbook.rs  trade_tape.rs  types.rs  websocket.rs
rust/src/risk/: circuit_breaker.rs  kill_switch.rs  manager.rs  mod.rs
rust/src/signal/: consumer.rs
rust/src/ui/: routes.rs  state.rs
scripts/: paper_trade.ps1  run_backtest.ps1  setup_db.ps1
ui/: terminal.html
