[project]
name = "tradebot-data"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "websockets>=13",
    "asyncpg>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24",
    "nats-py>=2",
    "redis[hiredis]>=5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sse-starlette>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "collector*", "models*", "signals*", "evaluator*", "dashboard*", "backtester*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
