[project]
name = "tradebot-data"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "websockets>=13",
    "asyncpg>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24",
    "nats-py>=2",
    "redis[hiredis]>=5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sse-starlette>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "collector*", "models*", "signals*", "evaluator*", "dashboard*", "backtester*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "RUF002", # ambiguous unicode in docstring (× is intentional)
    "RUF003", # ambiguous unicode in comment (× is intentional)
    "RUF006", # asyncio dangling task (fire-and-forget is intentional)
    "RUF059", # unused unpacked variable (common in tuple unpacking)
    "SIM102", # collapsible if (nested guard + check is often clearer)
    "SIM105", # contextlib.suppress vs try/except (readability preference)
    "SIM116", # dict lookup vs if-else (readability preference)
    "B017",   # assert-raises-exception (acceptable in tests)
    "B905",   # zip strict parameter (Python 3.10+ style, not critical)
]

[tool.ruff.lint.isort]
known-first-party = ["models", "signals", "evaluator", "collector", "dashboard", "backtester", "analytics", "calibrator", "rules", "config"]
