[package]
name = "tradebot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# Redis
fred = { version = "10", features = ["enable-rustls"] }

# NATS
async-nats = "0.38"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1"
