[package]
name = "tradebot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# Redis
fred = { version = "10", features = ["enable-rustls"] }

# NATS
async-nats = "0.38"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server (kill switch, health endpoints)
axum = "0.8"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde_json = "1"
base64 = "0.22"
urlencoding = "2"

# Crypto (RSA-PSS signing for Kalshi auth — pure Rust, no system OpenSSL)
rsa = "0.9"
sha2 = "0.10"

# Decimal arithmetic (no floats in money path)
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Cancellation
tokio-util = "0.7"

# Concurrency
dashmap = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# TLS provider (required by rustls — used by sqlx, reqwest, tokio-tungstenite, fred)
rustls = { version = "0.23", features = ["ring"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
